# football-simulator

./: .dockerignore  .drone.yml  .gitattributes  .gitignore  Cargo.toml  README.md  askama.toml  package-lock.json
src/core/: Cargo.toml  context.rs  mod.rs
src/core/src/: context.rs  lib.rs  simulator.rs
src/core/src/club/: club.rs  context.rs  history.rs  mod.rs  person.rs  relations.rs  result.rs  squad.rs  status.rs  tactics.rs
src/core/src/club/academy/: academy.rs  mod.rs  player.rs  result.rs  settings.rs
src/core/src/club/board/: board.rs  context.rs  mod.rs  result.rs
src/core/src/club/finance/: balance.rs  context.rs  history.rs  mod.rs  result.rs  sponsorship.rs
src/core/src/club/player/: attributes.rs  context.rs  contract.rs  generator.rs  happiness.rs  mailbox.rs  mod.rs  player.rs  position.rs  result.rs  skills.rs  statistics.rs  status.rs  training.rs  utils.rs
src/core/src/club/player/calculators/: calculator.rs  mod.rs  value_calculator.rs
src/core/src/club/player/contract/: contract.rs  mod.rs  negotiation.rs
src/core/src/club/player/generators/: generator.rs  mod.rs
src/core/src/club/player/mailbox/: mailbox.rs  mod.rs  result.rs
src/core/src/club/player/negotiation/: transfer_request.rs
src/core/src/club/player/training/: history.rs  mod.rs  result.rs  training.rs
src/core/src/club/staff/: attributes.rs  context.rs  contract.rs  focus.rs  mod.rs  responsibilities.rs  responsibility.rs  result.rs  selection.rs  staff.rs  staff_stub.rs
src/core/src/club/team/: collection.rs  context.rs  mod.rs  reputation.rs  result.rs  selection.rs  tactics.rs  team.rs
src/core/src/club/team/behaviour/: behaviour.rs  mod.rs  result.rs
src/core/src/club/team/matches/: history.rs  mod.rs
src/core/src/club/team/squad/: mod.rs  positioning.rs  selection.rs  selector.rs  (+1 more)
src/core/src/club/training/: training.rs
src/core/src/club/transfers/: mod.rs  transfer.rs
src/core/src/common/: mod.rs
src/core/src/common/neural/: mod.rs  net.rs
src/core/src/continent/: context.rs  continent.rs  mod.rs  result.rs
src/core/src/continent/processors/: country.rs  mod.rs
src/core/src/continent/tournaments/: champion_league.rs  context.rs  league_europe.rs  mod.rs
src/core/src/country/: context.rs  country.rs  mod.rs  result.rs
src/core/src/country/processors/: clubs.rs  leagues.rs  matches.rs  mod.rs
src/core/src/db/: continents.rs  mod.rs
src/core/src/db/data/: continents.json
src/core/src/generators/: generator.rs  player.rs
src/core/src/league/: collection.rs  context.rs  league.rs  mod.rs  result.rs  schedule.rs  season.rs  table.rs
src/core/src/league/processors/: mod.rs  schedule.rs
src/core/src/league/schedule/: mod.rs  models.rs  result.rs  round.rs  schedule.rs
src/core/src/league/storages/: match_storage.rs  mod.rs
src/core/src/league/table/: mod.rs  result.rs  table.rs
src/core/src/match/: ball.rs  distributions.rs  engine.rs  game.rs  mod.rs  player.rs  position.rs  result.rs  state.rs  steering.rs
src/core/src/match/engine/: collisions.rs  dispatcher.rs  engine.rs  field.rs  mod.rs  result.rs  tactics.rs
src/core/src/match/player/: player.rs
src/core/src/match/squad/: mod.rs  positioning.rs  selector.rs  squad.rs
src/core/src/shared/: currency.rs  fullname.rs  location.rs  mod.rs
src/core/src/shared/indexes/: mod.rs  simulator_indexes.rs
src/core/src/simulator/: mod.rs
src/core/src/transfers/: pool.rs  transfer.rs
src/core/src/utils/: date.rs  estimation.rs  floats.rs  formatting.rs  integers.rs  logging.rs  mod.rs  strings.rs
src/core/src/utils/random/: floats.rs  mod.rs
src/dev/graphics/: Cargo.toml
src/dev/graphics/src/: main.rs
src/server/: Cargo.toml  mod.rs  server.rs
src/server/actions/: index.rs  mod.rs  process.rs
src/server/actions/clubs/: get.rs  list.rs  mod.rs  routes.rs
src/server/actions/continents/: list.rs
src/server/actions/countries/: get.rs  list.rs  routes.rs
src/server/actions/game/: create.rs  index.rs  list.rs  mod.rs  process.rs
src/server/actions/leagues/: get.rs  list.rs  mod.rs  routes.rs
src/server/actions/players/: get.rs  list.rs  mod.rs  routes.rs
src/server/dto/: mod.rs
src/server/src/: lib.rs  routes.rs
src/server/src/countries/: get.rs  list.rs  mod.rs  routes.rs
src/server/src/date/: current_date.rs  mod.rs  routes.rs
src/server/src/game/: create.rs  mod.rs  process.rs  routes.rs
src/server/src/leagues/: get.rs  mod.rs  routes.rs
src/server/src/match/: data.rs  get.rs  lineup.rs  mod.rs  routes.rs
src/server/src/match/get/: mod.rs
src/server/src/player/: get.rs  routes.rs
src/server/src/stores/: match.rs  mod.rs
src/server/src/teams/: get.rs  mod.rs  routes.rs  schedule.rs
(+717 files in other folders)
