[package]
name = "football_simulator"
version = "0.1.0"
authors = ["ZOXEXIVO <zoxexivo@gmail.com>"]
edition = "2018"

[dependencies]
core = { path = "src/core" }
server = { path = "src/server" }
database = { path = "src/database" }
serde_json = "1.0.114"
serde = "1.0.197"
log = { version = "0.4.21", features = ["release_max_level_error"] }
env_logger = "0.11.3"
itertools = "0.12.1"
chrono = "0.4.35"
color-eyre = "0.6.3"
tokio = { version = "1.36.0", features = ["full"] }
rand = "0.8.5"
