[package]
name = "open_football"
version = "0.1.0"
authors = ["ZOXEXIVO <zoxexivo@gmail.com>"]
edition = "2018"

[dependencies]
core = { path = "src/core" }
server = { path = "src/server" }
database = { path = "src/database" }
serde_json = "1.0.132"
serde = "1.0.215"
log = { version = "0.4.22", features = ["release_max_level_error"] }
env_logger = "0.11.5"
itertools = "0.13.0"
chrono = "0.4.38"
color-eyre = "0.6.3"
tokio = { version = "1.41.1", features = ["full"] }
rand = "0.8.5"
