[package]
name = "open_football"
version = "0.1.0"
authors = ["ZOXEXIVO <zoxexivo@gmail.com>"]
edition = "2018"

[dependencies]
core = { path = "src/core" }
server = { path = "src/server" }
database = { path = "src/database" }
log = { version = "0.4.22", features = ["release_max_level_info"] }
env_logger = "0.11.6"
color-eyre = "0.6.3"
tokio = { version = "1.42.0", features = ["full"] }
