[package]
name = "core"
version = "0.1.0"
authors = ["ZOXEXIVO <zoxexivo@gmail.com>"]
edition = "2021"

[dependencies]
chrono = "0.4.38"
rand = "0.8.5"
rayon = "1.10.0"
rand_distr = "0.4.3"
serde = { version = "1.0.210", features = ["derive"] }
serde_json = "1.0.128"
log = "0.4.22"
itertools = "0.13.0"
nalgebra = "0.33.0"
bytes = "1.7.2"
