[package]
name = "core"
version = "0.1.0"
authors = ["ZOXEXIVO <zoxexivo@gmail.com>"]
edition = "2021"

[dependencies]
chrono = "0.4.38"
rand = "0.8.5"
rayon = "1.10.0"
rand_distr = "0.4.3"
serde = { version = "1.0.215", features = ["derive"] }
serde_json = "1.0.133"
log = "0.4.22"
itertools = "0.13.0"
nalgebra = { version = "0.33.2", features = ["serde-serialize"] }
bytes = "1.8.0"
